qax: 新增承诺书需求迭代

--- a/qax/漏洞p0级.md
+++ b/qax/漏洞p0级.md
@@ -3,6 +3,7 @@
    1. 列表页
       1. 当事件状态为'待提交''已撤回'时，操作显示'编辑''删除'`未完成`
       2. 当事件状态为'已提交'时，操作显示'撤回'`未完成`
+      + 废弃'提交''废弃'操作,新增'撤回'操作? 
    2. 详情页
       1. 新增事件处理进度功能**公共**
           1. 处理进度功能`未完成`
@@ -21,5 +22,33 @@
    1. 列表页
       1. 撤回操作说明`未完成`
       >  二线终审审批通过后，审批列表显示”撤回“按钮，点击”撤回“按钮，弹出弹窗，可以输入撤回理由，撤回理由将显示到事件详细中。即撤回该方案，审批列表状态更新”已撤回“；事件方案管理列表，状态变成【已撤回】
-      2. '已撤回'状态，支持'变更'操作`未完成`
-      3. 新增'网安审批''二线初审''二线复审'列表字段`未完成`
+      1. '已撤回'状态，支持'变更'操作`未完成`
+      2. 新增'网安审批''二线初审''二线复审'列表字段`未完成`
+
+
+```
+//已提交
+if(row?.status === 1) {
+  if(row.canRetract && row.canDisuse) {
+    显示,撤回、废弃按钮
+  } else if(row.canRetract && !row.canDisuse) {
+    显示,撤回按钮
+  } else if(!row.canRetract && row.canDisuse) {
+    显示,废弃按钮
+  }
+}
+// 待提交
+if(row?.status === 2) {
+  if(row.canDisuse) {
+    显示,提交、编辑、删除、废弃按钮
+  } else {
+    显示, 提交、编辑、删除按钮
+  }
+}
+已提交状态
+  只可能显示'撤回'或者'废弃'按钮
+  根据后端'撤回''废弃'字段控制
+待提交状态
+  必显示'提交''编辑''删除'按钮
+  '废弃'按钮,根据后端'废弃'字段控制
+```
