--- a/qax/承诺书.md
+++ b/qax/承诺书.md
@@ -1,19 +1,31 @@
-# 承诺书迭代
+# 2022/03/30承诺书迭代Pc端
 
 - 起始时间：2022/03/30 周三
 - 联调时间：2022/04/01 周五
 - 提测事件：2022/04/02 周六
- 
+
+
 ## 攻击队、组织单位、平台需求及订单信息
 
-   1. 显示逻辑更改，0显示为空 `未完成`
+   1. 显示逻辑更改，0显示为空 `完成`
       1. 攻击队需求金额
       2. 组队需求金额
       3. 平台需求金额
       4. 投入合计
 
-
 ## 项目预算投入汇总
-   1. 字段显示控制`未完成`  提示： 后端出相关字段控制
+   1. 字段显示控制`完成`
+      > 后端字段控制
       1. 天眼接口人
       2. 天眼人力成本
+
+# 2020/03/30承诺书模板
+
+- 跟漏洞事件p0级一起上线
+
+1. 样式调整`完成`
+   > 除客户名称、服务、产品外，其余都不可折行，全部显示
+   1. 投入出处
+   2. 防守侧 
+
+---
