--- a/qax/漏洞p0级.md
+++ b/qax/漏洞p0级.md
@@ -1,4 +1,4 @@
-## 漏洞事件
+## 漏洞事件2.1.5
 
 1. **事件列表**
    1. 列表页
@@ -53,13 +53,3 @@ if(row?.status === 2) {
   必显示'提交''编辑''删除'按钮
   '废弃'按钮,根据后端'废弃'字段控制
 ```
-
-方案管理
-  提交
-    审批人改成网安审批人
-      入参改了
-审批
-  通过
-    nodestatus 3 为网安审批的时候，展示二线初审
-    nodestatus 4 为二线初审，展示二线复审
-    nodestatus 5 为二线复审的时候，展示通知运营,跟审批信息
